base/backend/networking/cluster_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/enable-cors: 'true'
        nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
        nginx.ingress.kubernetes.io/cors-allow-origin: "*"
        nginx.org/websocket-services: "wss-go"

spec:
    tls:
      - hosts:
        - shigo.to
        - ws.shigo.to
        - api.shigo.to
        - image.shigo.to
        secretName: shigoto-q-tls
    rules:
      - host: shigo.to
        http:
            paths:
              - path: /
                pathType: Prefix
                backend:
                  service:
                    name: frontend
                    port:
                      number: 80
              - path: /go/
                pathType: Prefix
                backend:
                  service:
                    name: go
                    port:
                      number: 5050
      - host: ws.shigo.to
        http:
            paths:
              - path: /
                pathType: Prefix
                backend:
                  service:
                    name: wss-go
                    port:
                      number: 8080
      - host: api.shigo.to
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: django
                  port:
                    number: 5000
      - host: image.shigo.to
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: go
                  port:
                    number: 5050
